<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAWMImGRrbc5vsf8G2NSwRLje6yGJhE8Lw</string>

    <string name="app_name">ClicknEat</string>
    <string name="app_conversaciones">Conversaciones</string>
    <string name="app_perfil_usuario">Perfil</string>
    <string name="app_reservas">Reservas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login_view">Sign in</string>
    <string name="title_activity_registro">Register</string>

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>

    <string name="correoRegistro">Correo Electrónico</string>
    <string name="usuarioRegistro">Usuario</string>
    <string name="contrasenaRegistro">Contraseña</string>

    <string name="registrarse">Registrarse</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Conversaciones -->
    <string name="type_your_message">Escribir mensaje</string>

    <!-- String related SharedPreferences -->
    <string name="preferences_id_user">idUsuario</string>
    <string name="preferences_id_perfil_user">idPerfil</string>
    <string name="preferences_username">username</string>
    <string name="preferences_password">password</string>
    <string name="preferences_api_token_user">userApiToken</string>
    <string name="preferences_id_token">idToken</string>
    <string name="preferences_token">token</string>
    <string name="preferences_profile">profile_picture</string>
    <string name="preferences_email">email</string>
    <string name="user_type_value">userType</string>
    <string name="perfil_nombre">nombre</string>

    <!-- Google Login & Register -->
    <!--<string name="google_client_id">860655152354-kbdh6pk7inaho4jumi7avadlhur6hajn.apps.googleusercontent.com</string>-->
    <string name="google_client_id">900398575620-efr91t89lesg28b4grkmsjq5va1eh8vr.apps.googleusercontent.com</string>
    <string name="facebook_client_id">870589819746939</string>

    <!-- Account -->
    <string name="account_message">No tienes una cuenta? <u><strong>Registrate</strong></u></string>
    <string name="action_register_in_app">Registrando...</string>
    <string name="action_login_in_app">Iniciando sesion...</string>
    <string name="action_update_app">Actualizando...</string>
    <string name="action_loading_app">Cargando...</string>
    <string name="action_insert_app">Insertando...</string>
    <string name="action_reserva_app">Reservando...</string>
    <string name="action_remove_app">Eliminando...</string>
    <string name="connect_account">Reintentar</string>
    <string name="error_register_fcb">Error al registrar la cuenta</string>

    <!-- Tabs -->
    <string name="tab_conversaciones">Conversaciones</string>


    <!-- Drawer -->
    <string name="menu_perfil">Perfil</string>
    <string name="menu_conversaciones">Conversaciones</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>


    <!-- Perfil Usuario -->
    <string name="perfil_domicilios">Domicilios</string>
    <string name="perfil_publicaciones">Publicaciones</string>
    <string name="perfil_reservas">Reservas</string>
    <string name="perfil_comentarios">Comentarios</string>

    <!-- Dialog Domicilio -->
    <string name="direccion_domicilio_add">Direccion</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Cancelar</string>

    <string name="comentario_dialogo_title">Añadir Comentario</string>

    <string name="pick_image_intent_text">Selecciona una imagen</string>

    <string name="title_dialog_permission_images">Permisos necesarios</string>
    <string name="message_dialog_permission_images">Para poder tomar una foto necesitamos que nos de su autorizacion</string>
    
    <string name="title_comentario_dialog">¿Cómo fue tu experiencia?</string>
    <string name="placeholder_comentario_dialog">Dile lo que piensas</string>

    <string name="remove_reserva_title">Eliminar</string>
    <string name="remove_reserva_message">Se eliminará su reserva, ¿está de acuerdo?</string>
    <string name="remove_publicacion_message">Se eliminará su publicación de forma permanente, ¿está de acuerdo?</string>

    <string name="remove_reserva_title_completa">Completo</string>
    <string name="remove_reserva_message_completa">Publicacion completa, no existen plazas libres</string>

    <string name="remove_publicacion">Eliminar</string>

    <!--Strings related to MarkerHelper-->
    <string name="label_price">Precio</string>
    <string name="label_chef_name">Chef</string>
    <string name="label_rating">Puntuación</string>

</resources>
