<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_face_black_24px"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/ic_local_dining_black_24px"
            android:title="Reservas" />

    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_conversacion"
                android:icon="@drawable/ic_chat_black_24px"
                android:title="@string/menu_conversaciones" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24px"
                android:title="@string/menu_cerrar_sesion" />

        </menu>
    </item>

</menu>
