<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorIcons">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_comentario_tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/title_comentario_dialog"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/dialog_comentario_stars"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:numStars="5"
            android:padding="3dp"
            android:shrinkColumns="1"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/dialog_comentario_edValoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/placeholder_comentario_dialog"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLength="2000"
            android:maxLines="5"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_toLeftOf="@+id/button_ok"
                android:layout_alignParentTop="true"
                android:text="@string/dialog_cancel"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/dialog_OK"
                android:textColor="@color/colorAccent" />


        </RelativeLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialog_comentario_civ"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

</RelativeLayout>
