<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="com.dam2.clickneat.views.login.LoginView"
    android:orientation="vertical">


    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Logo"
                android:layout_width="150dp"
                android:layout_height="116dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="10px"
                app:srcCompat="@drawable/chimichangas" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/login_button_style"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorIcons"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">


                <FrameLayout
                    android:id="@+id/FrameLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:padding="10dp">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/gg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone"></com.google.android.gms.common.SignInButton>

                    <Button
                        android:id="@+id/email_sign_in_google"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/google_button_style"
                        android:onClick="onClick"
                        android:text="Google"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/FrameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:padding="10dp">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/email_sign_in_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/fb"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/facebook_button_style"
                        android:onClick="onClick"
                        android:text="FaceBook"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </FrameLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <TextView
                    android:id="@+id/action_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/account_message"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

            </LinearLayout>


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.gms.common.SignInButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </com.google.android.gms.common.SignInButton>
                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="51dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/facebook" />


            </LinearLayout>-->

        </LinearLayout>

    </ScrollView>

</LinearLayout>
