<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoPerfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_menu_camera" />

            <LinearLayout
                android:id="@+id/nombreLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/labelNombreUsuario"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="Nombre"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nombreUsuario"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:maxLines="1"
                    android:imeOptions="actionDone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">


                    <TextView
                        android:id="@+id/itemTitleDomicilio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toLeftOf="@+id/btnMoreDomicilio"
                        android:text="@string/perfil_domicilios"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnMoreDomicilio"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/login_button_style"
                        android:text="Añadir"
                        android:textColor="#FFF" />


                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_domicilios_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:focusableInTouchMode="true"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">


                    <TextView
                        android:id="@+id/itemTitlePublicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toLeftOf="@+id/btnMorePublicacion"
                        android:text="@string/perfil_publicaciones"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnMorePublicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/login_button_style"
                        android:text="Añadir"
                        android:textColor="#FFF" />


                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_publicaciones_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:focusableInTouchMode="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">


                    <TextView
                        android:id="@+id/itemTitleComentario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toLeftOf="@+id/btnMoreComentario"
                        android:text="@string/perfil_comentarios"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnMoreComentario"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/login_button_style"
                        android:text="Añadir"
                        android:textColor="#FFF" />


                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_comentarios_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>